[package]
name = "xee-xpath-load"
version = "0.2.0"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath"]
license = "MIT"
description = "Load XML into structs using XPath"
repository = "https://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath-load"
homepage = "https://github.com/Paligo/xee"


[dependencies]
xee-xpath-compiler = { path = "../xee-xpath-compiler", version = "0.1.5" }
xee-xpath = { path = "../xee-xpath", version = "0.1.5" }
thiserror = { workspace = true }
xot = { workspace = true }
ibig = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
iri-string = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
